--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,54 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
+source/lib/x86_64-linux/apinfe.compiled
+source/lib/x86_64-linux/apinfe.or
+source/lib/x86_64-linux/apinfe.res
+source/lib/x86_64-linux/controllernfce.ppu
+source/lib/x86_64-linux/DataSet.Serialize.Config.ppu
+source/lib/x86_64-linux/DataSet.Serialize.Consts.ppu
+source/lib/x86_64-linux/DataSet.Serialize.Export.ppu
+source/lib/x86_64-linux/DataSet.Serialize.Import.ppu
+source/lib/x86_64-linux/DataSet.Serialize.Language.ppu
+source/lib/x86_64-linux/DataSet.Serialize.ppu
+source/lib/x86_64-linux/DataSet.Serialize.UpdatedStatus.ppu
+source/lib/x86_64-linux/DataSet.Serialize.Utils.ppu
+source/lib/x86_64-linux/Horse.BasicAuthentication.ppu
+source/lib/x86_64-linux/Horse.Callback.ppu
+source/lib/x86_64-linux/Horse.Commons.ppu
+source/lib/x86_64-linux/Horse.Constants.ppu
+source/lib/x86_64-linux/Horse.Core.Files.ppu
+source/lib/x86_64-linux/Horse.Core.Group.Contract.ppu
+source/lib/x86_64-linux/Horse.Core.Group.ppu
+source/lib/x86_64-linux/Horse.Core.Param.Config.ppu
+source/lib/x86_64-linux/Horse.Core.Param.Field.Brackets.ppu
+source/lib/x86_64-linux/Horse.Core.Param.Field.ppu
+source/lib/x86_64-linux/Horse.Core.Param.Header.ppu
+source/lib/x86_64-linux/Horse.Core.Param.ppu
+source/lib/x86_64-linux/Horse.Core.ppu
+source/lib/x86_64-linux/Horse.Core.Route.Contract.ppu
+source/lib/x86_64-linux/Horse.Core.Route.ppu
+source/lib/x86_64-linux/Horse.Core.RouterTree.NextCaller.ppu
+source/lib/x86_64-linux/Horse.Core.RouterTree.ppu
+source/lib/x86_64-linux/Horse.Exception.Interrupted.ppu
+source/lib/x86_64-linux/Horse.Exception.ppu
+source/lib/x86_64-linux/Horse.Jhonson.ppu
+source/lib/x86_64-linux/Horse.Mime.ppu
+source/lib/x86_64-linux/Horse.ppu
+source/lib/x86_64-linux/Horse.Proc.ppu
+source/lib/x86_64-linux/Horse.Provider.Abstract.ppu
+source/lib/x86_64-linux/Horse.Provider.FPC.HTTPApplication.ppu
+source/lib/x86_64-linux/Horse.Provider.FPC.LCL.ppu
+source/lib/x86_64-linux/Horse.Request.ppu
+source/lib/x86_64-linux/Horse.Response.ppu
+source/lib/x86_64-linux/Horse.Session.ppu
+source/lib/x86_64-linux/Horse.WebModule.lfm
+source/lib/x86_64-linux/Horse.WebModule.ppu
+source/lib/x86_64-linux/udmprincipal.lfm
+source/lib/x86_64-linux/udmprincipal.ppu
+source/lib/x86_64-linux/ufrmprincipal.lfm
+source/lib/x86_64-linux/ufrmprincipal.ppu
+source/lib/x86_64-linux/ufuncoes.ppu
+source/backup/apinfe.lpi
+source/backup/apinfe.lpr
+source/backup/apinfe.lps
